@@ -79,6 +79,7 @@ BEGIN
         MENUITEM "Enable Background Input",     MENU_BACKGROUND_INPUT
         MENUITEM "Enable Auto-save",            MENU_ENABLE_AUTOSAVE
         MENUITEM "Frame Adv. - Skip Lag",       MENU_DISPLAY_FA_LAGSKIP
+        MENUITEM "Bind savestates to movie",    MENU_CONFIG_BINDSAVES
         POPUP "Display"
         BEGIN
             MENUITEM "Movie Status Icon",           MENU_SHOW_STATUS_ICON
